[package]
name = "test_suite"
version = "0.1.0"
edition = "2021"
authors = ["Ed Smith <ed.smith@collabora.com>"]
publish = false
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boulder = { path="../boulder", features=["persian-rug"] }
persian-rug = { version="0.1" }
